@@ -28,7 +28,11 @@ public interface Protocol extends Cloneable
 {
 
 /**
- * We have to include this to change the access right to public.
+ * Returns a clone of the protocol. It is important to pay attention to
+ * implement this carefully because in peersim all nodes are generated by
+ * cloning except a prototype node. That is, the constructor of protocols is
+ * used only to construct the prototype. Initialization can be done
+ * via {@link Control}s.
  */
 public Object clone() throws CloneNotSupportedException;
 
